<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Top">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:background="#fff">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#437cbe">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats_title"
                android:id="@+id/Header"
                android:textSize="25dp"
                android:layout_weight="1"
                android:textColor="@color/primary_text_default_material_dark"
                android:padding="5dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/Wait"
                android:src="@anim/ic_spin_animation_white"
                android:layout_gravity="right" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/imageView3"
                android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
                android:layout_marginLeft="10dp"
                android:onClick="OnMenuClick" />
        </LinearLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView"
            android:layout_weight="1"
            android:layout_gravity="top"
            android:padding="5dp"
            android:choiceMode="none"
            android:textFilterEnabled="false" />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/CreateChat"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectchat"
                android:id="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:singleLine="false"
                android:textSize="16dp"
                android:textColor="#000" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OK"
                android:id="@+id/buttonOK"
                android:layout_alignParentBottom="false"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/ChatName"
                android:onClick="onChatClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:id="@+id/buttonCancel"
                android:layout_below="@+id/ChatName"
                android:layout_toEndOf="@+id/buttonOK"
                android:focusable="true"
                android:enabled="true"
                android:onClick="onChatClick"
                android:nestedScrollingEnabled="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ChatName"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:hint="@string/namechat"
                android:textSize="25dp"
                android:visibility="gone"
                android:textColor="#000"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:enabled="true"
                android:textColorHint="#555"
                android:editable="true" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/manu"
        android:padding="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:divider="#000"
        android:dividerPadding="1dp"
        android:showDividers="middle"
        android:visibility="gone"
        android:id="@+id/Menu">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createchat"
            android:id="@+id/menu_createchat"
            android:textSize="24dp"
            android:padding="10dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:id="@+id/menu_refresh"
            android:textSize="24dp"
            android:padding="10dp"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/menu_settings"
            android:textSize="24dp"
            android:padding="10dp"
            android:nestedScrollingEnabled="true"
            android:textColor="#000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runvk"
            android:id="@+id/menu_runvk"
            android:textSize="24dp"
            android:padding="10dp"
            android:nestedScrollingEnabled="true"
            android:textColor="#000" />

    </LinearLayout>

</RelativeLayout>
